--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 		<p>Jude Leschyshyn (rhymes with "musician") is a pianist and saxophonist based in Saskatoon. He holds a B.Mus. from the University of Saskatchewan. He works as a music teacher, performer, accompanist, and composer.</p>
 		<figure>
 			<figcaption>Fig. 2</figcaption>
-			<img src="images/me2.png"/>
+			<img src="images/piano.png" alt="A stock photo of piano keys."/>
 		</figure>
 		<h1>Lessons.</h1>
 		<p>With fifteen years of piano experience, Jude teaches piano, music theory, and music history to all ages and skill levels. He is currently accepting new students&mdash;get in touch below.</p>
 		<figure>
                         <figcaption>Fig. 3</figcaption>
-                        <img src="images/me3.png"/>
+                        <img src="images/sax.png" alt="A stock photo of a saxophone."/>
                 </figure>
 		<h1>Gigs.</h1>
 		<p>Jude performs with the Footnotes Big Band and the Saskatoon Experimental Music Ensemble. When he can, he performs with his jazz trio or in solo recital. He is open for booking as an accompanist&mdash;enquire <a href="mailto:PLACEHOLDER">here.</a></p>
