--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<img src="images/piano.png" alt="A stock photo of piano keys."/>
 		</figure>
 		<h1>Lessons.</h1>
-		<p>With fifteen years of piano experience, Jude teaches piano, music theory, and music history to all ages and skill levels. He is currently accepting new students&mdash;get in touch below.</p>
+		<p>With fifteen years of piano experience, Jude teaches and tutors piano, music theory, and music history to all ages and skill levels. He is currently accepting new students&mdash;get in touch below.</p>
 		<figure>
                         <figcaption>Fig. 3</figcaption>
                         <img src="images/sax.png" alt="A stock photo of a saxophone."/>
