--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
                         <img src="images/sax.png" alt="A stock photo of a saxophone."/>
                 </figure>
 		<h1>Gigs.</h1>
-		<p>Jude performs with the Footnotes Big Band and the Saskatoon Experimental Music Ensemble. When he can, he performs with his jazz trio or in solo recital. He is open for booking as an accompanist&mdash;enquire <a href="mailto:PLACEHOLDER">here.</a></p>
+		<p>Jude performs with the Footnotes Big Band and the Saskatoon Experimental Music Ensemble. When he can, he performs with his jazz trio or in solo recital. He is open for booking as an accompanist&mdash;enquire <a href="mailto:business@judeleschyshyn.com">here.</a></p>
 	</body>
 </html>
