Degree update index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<img src="images/me.png" alt="A cute picture of me on a hike."/>
 		</figure>
 		<h1>Bio.</h1>
-		<p>Jude Leschyshyn (rhymes with "musician") is a pianist and saxophonist based in Saskatoon. He (nearly) holds a B.Mus. from the University of Saskatchewan. He works as a music teacher, performer, accompanist, and composer.</p>
+		<p>Jude Leschyshyn (rhymes with "musician") is a pianist and saxophonist based in Saskatoon. He holds a B.Mus. from the University of Saskatchewan. He works as a music teacher, performer, accompanist, and composer.</p>
 		<figure>
 			<figcaption>Fig. 2</figcaption>
 			<img src="images/piano.png" alt="A stock photo of piano keys."/>
