Add work sans to index.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
 	<head>
-		<link href="style.css" rel="stylesheet"/>
+		<link rel="stylesheet" href="style.css"/>
 		<meta charset="utf-8"/>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans"/>
 		<meta name="viewport" content="width=device-width"/>
 		<title>Jude Leschyshyn &bull; Musician</title>
 		<link rel="icon" href="images/favicon.png"/>
