--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 			<img src="images/me.png" alt="A cute picture of me on a hike."/>
 		</figure>
 		<h1>Bio.</h1>
-		<p>Jude Leschyshyn (rhymes with "musician") is a pianist and saxophonist based in Saskatoon. He holds a B.Mus. from the University of Saskatchewan. He works as a music teacher, performer, accompanist, and composer.</p>
+		<p>Jude Leschyshyn (rhymes with "musician") is a pianist and saxophonist based in Saskatoon. He holds a B.Mus. and Jazz Certificate from the University of Saskatchewan. He works as a music teacher, performer, accompanist, and composer.</p>
 		<figure>
 			<figcaption>Fig. 2</figcaption>
 			<img src="images/piano.png" alt="A stock photo of piano keys."/>
 		</figure>
 		<h1>Lessons.</h1>
-		<p>With fifteen years of piano experience, Jude teaches and tutors piano, music theory, and music history to all ages and skill levels. He is currently accepting new students&mdash;get in touch below.</p>
+		<p>With fifteen years of piano experience, Jude teaches and tutors piano, music theory, and music history to all ages and skill levels. He is currently accepting new students&mdash;enquire <a href="mailto:business@judeleschyshyn.com">here.</p>
 		<figure>
                         <figcaption>Fig. 3</figcaption>
                         <img src="images/sax.png" alt="A photo of me playing bari sax." title="Photo credit to Bob Holtsman."/>
                 </figure>
 		<h1>Gigs.</h1>
-		<p>Jude performs with the Footnotes Big Band and the Saskatoon Experimental Music Ensemble. When he can, he performs with his jazz trio or in solo recital. He is open for booking as an accompanist&mdash;enquire <a href="mailto:business@judeleschyshyn.com">here.</a></p>
+		<p>Jude performs with the Footnotes Big Band and the Saskatoon Experimental Music Ensemble. When he can, he performs with his jazz trio or in solo recital. He is open for booking as an accompanist.</a></p>
 	</body>
 </html>
