fixed link index.html

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 			<img src="images/piano.png" alt="A stock photo of piano keys."/>
 		</figure>
 		<h1>Lessons.</h1>
-		<p>With fifteen years of piano experience, Jude teaches and tutors piano, music theory, and music history to all ages and skill levels. He is currently accepting new students&mdash;enquire <a href="mailto:business@judeleschyshyn.com">here.</p>
+		<p>With fifteen years of piano experience, Jude teaches and tutors piano, music theory, and music history to all ages and skill levels. He is currently accepting new students&mdash;enquire <a href="mailto:business@judeleschyshyn.com">here.</a></p>
 		<figure>
                         <figcaption>Fig. 3</figcaption>
                         <img src="images/sax.png" alt="A photo of me playing bari sax." title="Photo credit to Bob Holtsman."/>
                 </figure>
 		<h1>Gigs.</h1>
-		<p>Jude performs with the Footnotes Big Band and the Saskatoon Experimental Music Ensemble. When he can, he performs with his jazz trio or in solo recital. He is open for booking as an accompanist.</a></p>
+		<p>Jude performs with the Footnotes Big Band and the Saskatoon Experimental Music Ensemble. When he can, he performs with his jazz trio or in solo recital. He is open for booking as an accompanist.</p>
 	</body>
 </html>
