--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<img src="images/me.png" alt="A cute picture of me on a hike."/>
 		</figure>
 		<h1>Bio.</h1>
-		<p>Jude Leschyshyn (rhymes with "musician") is a pianist and saxophonist based in Saskatoon. He holds a B.Mus. and Jazz Certificate from the University of Saskatchewan. He works as a music teacher, performer, accompanist, and composer.</p>
+		<p>Jude Leschyshyn (rhymes with "musician") is a pianist and saxophonist based in Saskatoon. He holds a B.Mus. and Jazz Certificate from the University of Saskatchewan. He works as a piano teacher, performer, and composer.</p>
 		<figure>
 			<figcaption>Fig. 2</figcaption>
 			<img src="images/piano.png" alt="A stock photo of piano keys."/>
@@ -30,6 +30,6 @@
                         <img src="images/sax.png" alt="A photo of me playing bari sax." title="Photo credit to Bob Holtsman."/>
                 </figure>
 		<h1>Gigs.</h1>
-		<p>Jude performs with the Footnotes Big Band and the Saskatoon Experimental Music Ensemble. When he can, he performs with his jazz trio or in solo recital. He is open for booking as an accompanist.</p>
+		<p>Jude performs Saskatoon Experimental Music Ensemble and Footnotes Big Band. His work has be featured as part of the Strata Festival of New Music and the Saskatchewan Jazz Festival.</p>
 	</body>
 </html>
