fixed bio update

--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
                         <img src="images/sax.png" alt="A photo of me playing bari sax." title="Photo credit to Bob Holtsman."/>
                 </figure>
 		<h1>Gigs.</h1>
-		<p>Jude performs Saskatoon Experimental Music Ensemble and Footnotes Big Band. His work has be featured as part of the Strata Festival of New Music and the Saskatchewan Jazz Festival.</p>
+		<p>Jude performs with the Saskatoon Experimental Music Ensemble and Footnotes Big Band. His work has be featured as part of the Strata Festival of New Music and the Saskatchewan Jazz Festival.</p>
 	</body>
 </html>
