--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<img src="images/piano.png" alt="A stock photo of piano keys."/>
 		</figure>
 		<h1>Lessons.</h1>
-		<p>With fifteen years of piano experience, Jude teaches and tutors piano, music theory, and music history to all ages and skill levels. His private studio is located on Saskatoon's east side. He is currently accepting new students&mdash;enquire <a href="mailto:business@judeleschyshyn.com">here.</a></p>
+		<p>With fifteen years of piano experience, Jude teaches piano, music theory, and music history to all ages and skill levels. His private studio is located on Saskatoon's east side. He is currently accepting new students&mdash;enquire <a href="mailto:business@judeleschyshyn.com">here.</a></p>
 		<figure>
                         <figcaption>Fig. 3</figcaption>
                         <img src="images/sax.png" alt="A photo of me playing bari sax." title="Photo credit to Bob Holtsman."/>
