--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<img src="images/me.png" alt="A cute picture of me on a hike."/>
 		</figure>
 		<h1>Bio.</h1>
-		<p>Jude Leschyshyn (rhymes with "musician") is a pianist and saxophonist based in Saskatoon. He holds a B.Mus. and Jazz Certificate from the University of Saskatchewan. He works as a piano teacher, performer, and composer.</p>
+		<p>Jude Leschyshyn (rhymes with "musician") is a pianist and saxophonist based in Saskatoon on Treaty 6 territory. He holds a B.Mus. and Jazz Certificate from the University of Saskatchewan. He works as a piano teacher, performer, and composer.</p>
 		<figure>
 			<figcaption>Fig. 2</figcaption>
 			<img src="images/piano.png" alt="A stock photo of piano keys."/>
