--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 	<body>
 		<figure>
 			<figcaption>Fig. 1</figcaption>
-			<img src="images/me.png" alt="A cute picture of me on a hike."/>
+			<img src="images/fig1.jpg" alt="A picture of me at the piano." title="Taken by Sergio Del Valle on film."/>
 		</figure>
 		<h1>Bio.</h1>
 		<p>Jude Leschyshyn (rhymes with "musician") is a pianist and saxophonist based in Saskatoon on Treaty 6 territory. He holds a B.Mus. and Jazz Certificate from the University of Saskatchewan. He works as a piano teacher, performer, and composer.</p>
 		<figure>
 			<figcaption>Fig. 2</figcaption>
-			<img src="images/piano.png" alt="A stock photo of piano keys."/>
+			<img src="images/fig2.jpg" alt="A picture of me playing piano." title="Taken by Sergio Del Valle on film."/>
 		</figure>
 		<h1>Lessons.</h1>
 		<p>With fifteen years of piano experience, Jude teaches piano, music theory, and music history to all ages and skill levels. His private studio is located on Saskatoon's east side. He is currently accepting new students&mdash;enquire <a href="mailto:business@judeleschyshyn.com">here.</a></p>
 		<figure>
                         <figcaption>Fig. 3</figcaption>
-                        <img src="images/sax.png" alt="A photo of me playing bari sax." title="Photo credit to Bob Holtsman."/>
+                        <img src="images/fig3.jpg" alt="A picture of me looking distracted and confused." title="Taken by Sergio Del Valle on film."/>
                 </figure>
 		<h1>Gigs.</h1>
 		<p>Jude performs with the Saskatoon Experimental Music Ensemble and Footnotes Big Band. His work has been featured as part of the Strata Festival of New Music and the Saskatchewan Jazz Festival.</p>
