removed email, added rmt index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<img src="images/fig2.jpg" alt="A picture of me playing piano." title="Taken by Sergio Del Valle on film."/>
 		</figure>
 		<h1>Lessons.</h1>
-		<p>With fifteen years of piano experience, Jude teaches piano, music theory, and music history to all ages and skill levels. His private studio is located on Saskatoon's east side. He is currently accepting new students&mdash;enquire <a href="mailto:business@judeleschyshyn.com">here.</a></p>
+		<p>With fifteen years of piano experience, Jude teaches piano, music theory, and music history to all ages and skill levels. His private studio is located on Saskatoon's east side. He is a registered music teacher.</p>
 		<figure>
                         <figcaption>Fig. 3</figcaption>
                         <img src="images/fig3.jpg" alt="A picture of me looking distracted and confused." title="Taken by Sergio Del Valle on film."/>
